Separated sass into modules

--- a/lib/template/datepicker.hbs
+++ b/lib/template/datepicker.hbs
@@ -46,6 +46,9 @@
       <div class="c-datepicker__clock-hands">
         <div class="c-datepicker__hour-hand"></div>
       </div>
+      <div class="c-datepicker__clock-hands--selected">
+        <div class="c-datepicker__hour-hand"></div>
+      </div>
     </div>
     <div class="c-datepicker__clock__minutes">
       <div class="c-datepicker__clock__num" data-number="15">15</div>
@@ -60,7 +63,11 @@
       <div class="c-datepicker__clock__num" data-number="0">0</div>
       <div class="c-datepicker__clock__num" data-number="5">5</div>
       <div class="c-datepicker__clock__num" data-number="10">10</div>
+
       <div class="c-datepicker__clock-hands">
+        <div class="c-datepicker__hour-hand"></div>
+      </div>
+      <div class="c-datepicker__clock-hands--selected">
         <div class="c-datepicker__hour-hand"></div>
       </div>
     </div>
